Fixed header z-index

--- a/Frontend/src/assets/sass/3-modules/_header.sass
+++ b/Frontend/src/assets/sass/3-modules/_header.sass
@@ -80,7 +80,7 @@ header
       width: 100%
       height: calc(100% - 75px)
       background: $white
-      z-index: 1002
+      z-index: 10000
       padding-left: 30px
       transition: opacity 100ms linear
 
